Completed pig Game

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <p class="p1_Score score" id="score--1">0</p>
         <div class="current">
           <p class="current-label">Current</p>
-          <p class="current-score">0</p>
+          <p class="current-score" id="current--1">0</p>
         </div>
       </section>
       <!-- Player 2 -->
@@ -24,11 +24,13 @@
         <p class="p2_Score score" id="score--2">0</p>
         <div class="current">
           <p class="current-label">Current</p>
-          <p class="current-score">0</p>
+          <p class="current-score" id="current--2">0</p>
         </div>
       </section>
 
       <img src="images/dice-5.png" alt="" class="dice" />
+      <p class="dice--winner--left"><span>⬅</span></p>
+      <p class="dice--winner--right"><span>➡</span></p>
       <button class="btn btn--new">🔄 New game</button>
       <button class="btn btn--roll">🎲 Roll dice</button>
       <button class="btn btn--hold">📥 Hold</button>
